# Twitter-list-manager

./: .gitignore  LICENSE  README.md  list_manager.py  output.py  pyproject.toml  settings.py  test.py  twapi.py
.github/workflows/: codeql-analysis.yml
docs/: conf.py  index.rst  listmanager.rst  modules.rst  twapi.rst
listmanager/: __main__.py  function.py  listmanager.py  settings.py
tests/: test.py
